Fixed shooting star 1 on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -432,6 +432,12 @@ h1, h2, h3, h4, h5, h6, p {
   -webkit-animation: shoot1 8s steps(7) infinite;
   animation: shoot1 8s steps(7) infinite;
 }
+@media (max-width: 575.98px) {
+  #stars .shooting-1 {
+    -webkit-animation-name: shoot1-mobile;
+    animation-name: shoot1-mobile;
+  }
+}
 @-webkit-keyframes shoot1 {
   0% {
     background-position-x: 0px;
@@ -472,6 +478,52 @@ h1, h2, h3, h4, h5, h6, p {
     background-position-x: -35vw;
     -webkit-transform: translateY(25vh) translateX(-5vw);
     transform: translateY(25vh) translateX(-5vw);
+    opacity: 0;
+  }
+  7.001%, 100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes shoot1-mobile {
+  0% {
+    background-position-x: 0px;
+    -webkit-transform: translateY(5vh) translateX(5vw);
+    transform: translateY(5vh) translateX(5vw);
+    opacity: 0;
+  }
+  2% {
+    opacity: 1;
+  }
+  4% {
+    opacity: 1;
+  }
+  7% {
+    background-position-x: -35vw;
+    -webkit-transform: translateY(13vh) translateX(-6vw);
+    transform: translateY(13vh) translateX(-6vw);
+    opacity: 0;
+  }
+  7.001%, 100% {
+    opacity: 0;
+  }
+}
+@keyframes shoot1-mobile {
+  0% {
+    background-position-x: 0px;
+    -webkit-transform: translateY(5vh) translateX(5vw);
+    transform: translateY(5vh) translateX(5vw);
+    opacity: 0;
+  }
+  2% {
+    opacity: 1;
+  }
+  4% {
+    opacity: 1;
+  }
+  7% {
+    background-position-x: -35vw;
+    -webkit-transform: translateY(13vh) translateX(-6vw);
+    transform: translateY(13vh) translateX(-6vw);
     opacity: 0;
   }
   7.001%, 100% {
